--- a/package.json
+++ b/package.json
@@ -10,11 +10,11 @@
     "eccrypto": "^1.0.3",
     "express": "^4.16.2",
     "lodash": "^4.17.4",
+    "nedb": "^1.8.0",
     "nodemon": "^1.12.1",
     "react": "^16.0.0",
     "react-dom": "^16.0.0",
     "react-scripts": "1.0.17",
-    "realm": "^2.0.3",
     "ws": "^3.3.0",
     "yup": "^0.23.0"
   },
